[project]
name = "solana-libs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "python-dotenv>=1.0.1",
    "solana>=0.36.1",
    "solders>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "isort>=5.13.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="function"
